--- a/dancefloor.html
+++ b/dancefloor.html
@@ -6,11 +6,17 @@
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+    <script src="src/starDancer.js"></script>
+    <script src="src/spongeBobDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
+      <a href="#" class="dancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>
+      <a href="#" class="dancerButton" data-dancer-maker-function-name="starDancer">add a star dancer</a>
+      <a href="#" class="dancerButton" data-dancer-maker-function-name="spongeBobDancer">add a Sponge Bob</a>
+      <a href="#" class="lineUpButton">line up</a>
+    </div>
     <script src="src/init.js"></script>
   </body>
 </html>
